# test_cmake

./: CMakeLists.txt  CMakePresets.json
app/: CMakeLists.txt  test_cmake.cpp
include/: person.h
src/: CMakeLists.txt  jsoncpp.cpp  person.cpp
